2022-11-29  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/libdejagnu/unit.exp: Add note that tests for the
	framework side of the unit testing protocol are located in
	testsuite/runtest.main/stats.exp and its nested testsuite.

	* Makefile.in: Regenerate.
	* Makefile.am (check_PROGRAMS): Remove unit.
	(unit_SOURCES): Remove.
	* testsuite/libdejagnu/tunit.exp: Remove file.
	* testsuite/libdejagnu/unit.cc: Remove file.
	The limited coverage of this test is now included in unit.exp
	and unit-cxx, and supporting this test required some leaky
	abstractions in dejagnu.h that can now be cleaned up.

	* Makefile.in: Regenerate.
	* Makefile.am (check_PROGRAMS): Add testsuite/libdejagnu/unit-cxx.
	(testsuite_libdejagnu_unit_cxx_SOURCES): Add.
	* testsuite/libdejagnu/unit.exp: Add tests for C++ unit test API.

	* testsuite/libdejagnu/unit-cxx.cxx: New file.

	* dejagnu.h (TestState::totals): Emit header line, like the C version.

	* dejagnu.h (TestState::note): New method, like C note().
	* doc/dejagnu.texi (C++ unit testing API): Add note() method.

	* doc/dejagnu.texi (C++ unit testing API): Fix incorrect
	documentation.  The C and C++ interfaces share the same global
	counters, as do all C++ TestState objects.

2022-11-28  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu.h: Remove _DEJAGNU_WAIT_ conditional and revise comment
	to explain improved solution to the problem for which it seems to
	have been intended as a workaround.
	(wait): Remove this function.  It conflicted with POSIX wait(2);
	this conflict was reported as PR59586.

	* testsuite/runtest.main/stats.exp: Add test for UNSUPPORTED
	result from a unit test program.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	Update to account for addition of END marker and UNSUPPORTED to
	DejaGnu unit testing protocol.

	* dejagnu.h: Add UNSUPPORTED test result.
	(unsupport): New counter variable for UNSUPPORTED results.
	(unsupported): New function in C API.
	(TestState::unsupported): New function in C++ API.